--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 10:29:00 AM</p>
+    <p class="lastupdate">09/16/2020 10:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.031 inHg (0.009)</td>
+        <td class="data">30.032 inHg (0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:28:57 AM">
-            67.5</span><br/>
+          <span title="10:33:33 AM">
+            68.1</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:28:57 AM" class="hival">
-            67.5</span>
+          <span title="10:33:33 AM" class="hival">
+            68.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:26:43 AM">
+          <span title="10:30:59 AM">
             48.5</span><br/>
           <span title="02:24:06 AM">
             36.5</span>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="12:00:04 AM">
-            50</span>
+          <span title="10:29:25 AM">
+            49</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          21
+          25
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="10:08:01 AM">
-            35</span><br/>
+          <span title="10:31:01 AM">
+            36</span><br/>
           <span title="12:00:04 AM">
             32</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 19 hours, 42 minutes</td>
+      <td class="data">14 days, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 19 hours, 42 minutes</td>
+      <td class="data">14 days, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
