--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 11:14:00 AM</p>
+    <p class="lastupdate">09/16/2020 11:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.3&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.014 inHg (-0.017)</td>
+        <td class="data">30.017 inHg (-0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.8&#176;F</td>
+        <td class="data">73.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:13:21 AM">
-            73.2</span><br/>
+          <span title="11:18:49 AM">
+            74.1</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:13:21 AM" class="hival">
-            73.2</span>
+          <span title="11:18:49 AM" class="hival">
+            74.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:13:21 AM">
-            49.3</span><br/>
+          <span title="11:14:23 AM">
+            49.5</span><br/>
           <span title="02:24:06 AM">
             36.5</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="11:10:25 AM">
-            43</span>
+          <span title="11:14:41 AM">
+            42</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          30
+          32
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 20 hours, 27 minutes</td>
+      <td class="data">14 days, 20 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 20 hours, 27 minutes</td>
+      <td class="data">14 days, 20 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
